Simplifies Tap/Long-Press handling in AppsGridView

These events were being sent up to AppListView, then back to
AppsGridView. In reality, these events can all be handled before
letting them pass through, just based on the nearest tile.

Bug: 893216
Change-Id: I9fee2bd9be03efb54a90b07d87bcf9f1a772d6f8
Reviewed-on: https://chromium-review.googlesource.com/c/1286129
Commit-Queue: Kevin Strohbehn <ginko@google.com>
Reviewed-by: Weidong Guo <weidongg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600611}
Former-commit-id: 62162751f2e30bac3c591068326e6a2df5c69ebe